# rusty_cpp_wrapper

./: .gitignore  README.md
mycpplib/: CMakeLists.txt
mycpplib/include/: sinewave.hpp
mycpplib/src/: main.cpp  sinewave.cpp
